--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">eisha-cardioBook(latest)</string>
+    <string name="app_name">eisha-CardioBook</string>
     <string name="add_new">New Entry</string>
     <string name="date">Date</string>
     <string name="time">Time</string>
